# api/apiToken/ApiTokenRouter.go
@@ -19,6 +19,6 @@ func NewApiTokenRouterImpl(apiTokenRestHandler ApiTokenRestHandler) *ApiTokenRou
 func (impl ApiTokenRouterImpl) InitApiTokenRouter(configRouter *mux.Router) {
 	configRouter.Path("").HandlerFunc(impl.apiTokenRestHandler.GetAllApiTokens).Methods("GET")
 	configRouter.Path("").HandlerFunc(impl.apiTokenRestHandler.CreateApiToken).Methods("POST")
-	configRouter.Path("").HandlerFunc(impl.apiTokenRestHandler.UpdateApiToken).Methods("PUT")
-	configRouter.Path("").HandlerFunc(impl.apiTokenRestHandler.DeleteApiToken).Methods("DELETE")
+	configRouter.Path("/{id}").HandlerFunc(impl.apiTokenRestHandler.UpdateApiToken).Methods("PUT")
+	configRouter.Path("/{id}").HandlerFunc(impl.apiTokenRestHandler.DeleteApiToken).Methods("DELETE")
 }
