# api/openapi/openapiClient/model_delete_api_token_request.go
@@ -1,116 +1,0 @@
-/*
-Devtron Labs
-
-No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
-
-API version: 1.0.0
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package openapi
-
-import (
-	"encoding/json"
-)
-
-// DeleteApiTokenRequest struct for DeleteApiTokenRequest
-type DeleteApiTokenRequest struct {
-	// Id of api-token
-	Id *int32 `json:"id,omitempty"`
-}
-
-// NewDeleteApiTokenRequest instantiates a new DeleteApiTokenRequest object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewDeleteApiTokenRequest() *DeleteApiTokenRequest {
-	this := DeleteApiTokenRequest{}
-	return &this
-}
-
-// NewDeleteApiTokenRequestWithDefaults instantiates a new DeleteApiTokenRequest object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewDeleteApiTokenRequestWithDefaults() *DeleteApiTokenRequest {
-	this := DeleteApiTokenRequest{}
-	return &this
-}
-
-// GetId returns the Id field value if set, zero value otherwise.
-func (o *DeleteApiTokenRequest) GetId() int32 {
-	if o == nil || o.Id == nil {
-		var ret int32
-		return ret
-	}
-	return *o.Id
-}
-
-// GetIdOk returns a tuple with the Id field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *DeleteApiTokenRequest) GetIdOk() (*int32, bool) {
-	if o == nil || o.Id == nil {
-		return nil, false
-	}
-	return o.Id, true
-}
-
-// HasId returns a boolean if a field has been set.
-func (o *DeleteApiTokenRequest) HasId() bool {
-	if o != nil && o.Id != nil {
-		return true
-	}
-
-	return false
-}
-
-// SetId gets a reference to the given int32 and assigns it to the Id field.
-func (o *DeleteApiTokenRequest) SetId(v int32) {
-	o.Id = &v
-}
-
-func (o DeleteApiTokenRequest) MarshalJSON() ([]byte, error) {
-	toSerialize := map[string]interface{}{}
-	if o.Id != nil {
-		toSerialize["id"] = o.Id
-	}
-	return json.Marshal(toSerialize)
-}
-
-type NullableDeleteApiTokenRequest struct {
-	value *DeleteApiTokenRequest
-	isSet bool
-}
-
-func (v NullableDeleteApiTokenRequest) Get() *DeleteApiTokenRequest {
-	return v.value
-}
-
-func (v *NullableDeleteApiTokenRequest) Set(val *DeleteApiTokenRequest) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableDeleteApiTokenRequest) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableDeleteApiTokenRequest) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableDeleteApiTokenRequest(val *DeleteApiTokenRequest) *NullableDeleteApiTokenRequest {
-	return &NullableDeleteApiTokenRequest{value: val, isSet: true}
-}
-
-func (v NullableDeleteApiTokenRequest) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableDeleteApiTokenRequest) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
